--- a/public/css/style.css
+++ b/public/css/style.css
@@ -52,6 +52,8 @@ hr {
     display: inline-block;
     text-transform: uppercase;
     font-weight: 500;
+    text-decoration: none;
+    color: black;
 }
 
 .category-item:hover {
@@ -113,6 +115,14 @@ hr {
     position: absolute;
     right: 0;
     bottom: 0;
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.adicionar:hover {
+    color: white;
 }
 
 .cardapio-content {
@@ -178,4 +188,15 @@ hr {
     font-size: 20px;
     font-weight: 500;
     margin-bottom: -10px;
+}
+
+.pedido i {
+    font-size: 18px;
+}
+
+.botao-deletar {
+    text-decoration: none;
+    border: none;
+    background-color: red;
+    padding: 2px 10px;
 }
