--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,10 +19,6 @@ body {
     padding: 0;
 }
 
-hr {
-    color: #DEE2E6;
-}
-
 
 /* category */
 
@@ -88,7 +84,7 @@ hr {
     position: relative;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     background-color: #FEFEFE;
-    min-height: 240px;
+    height: 240px;
     max-height: 300px;
     max-width: 300px;
 }
@@ -159,11 +155,13 @@ hr {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     border-top: 3px solid var(--secondary-bg-color);
     border-bottom: 3px solid var(--secondary-bg-color);
+    overflow: hidden !important;
 }
 
 .pedido {
     display: flex;
     justify-content: space-between;
+    height: 35px;
 }
 
 .pedido h4 {
@@ -174,6 +172,10 @@ hr {
 .pedido p {
     font-size: 14px;
     max-width: 65%;
+    margin: 0;
+    padding: 5px 0;
+    margin: 0 !important;
+    padding: 0 !important;
 }
 
 .pedido-preco {
@@ -184,10 +186,14 @@ hr {
     color: var( --main-bg-color);
 }
 
+.total {
+    border-top: 1px solid #DEE2E6;
+    margin-bottom: -15px;
+}
+
 .total p {
     font-size: 20px;
     font-weight: 500;
-    margin-bottom: -10px;
 }
 
 .pedido i {
@@ -195,8 +201,37 @@ hr {
 }
 
 .botao-deletar {
-    text-decoration: none;
     border: none;
-    background-color: red;
     padding: 2px 10px;
+    display: none;
+    max-height: 100%;
+    margin-left: -16px;
+    height: 30px;
+    width: 40px;
+    position: relative;
+    -webkit-animation: linear;
+    -webkit-animation-name: run;
+    -webkit-animation-duration: 0.4s;
+    background-color: #dc3545;
+    color: #fff;
+}
+
+.pedido:hover .botao-deletar {
+    display: inline;
+}
+
+.pedido:hover .pedido p {
+    margin: 0;
+}
+
+@-webkit-keyframes run {
+    0% {
+        left: -30%;
+    }
+    50% {
+        left: 0;
+    }
+    100% {
+        left: 0;
+    }
 }
